# Proyecto1LDP

./: CHANGELOG.md  Grammar.y  Grammars.y  LICENSE  Lambdae.txt  README.md  proyecto1ldp.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  proyecto1ldp-0.1.0.0-inplace.conf
src/: Desugar.hs  Eval.hs  Grammar.hi  Grammar.hs  Grammar.info  Grammar.y  Grammars.hs  Grammars.y  Interp.hs  Lex.hs  Lex.x  Lexer.hs  Lexer.x  Main.hs  MiniLisp.hs  Test.hs
src borrador/: Desugar.hi  Desugar.hs  Eval.hs  Lexer.hi  Lexer.x  Main.hi  Main.hs  Test.hs
