cabal-version:      3.0

name:               proyecto1ldp
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edu
maintainer:         eduardoelizalde@ciencias.unam.mx
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  Lex, Grammars, Desugar, Interp
  build-depends:
    base ^>=4.18.3.0,
    array,
    containers,
    mtl
  hs-source-dirs:   src
  default-language: GHC2021

executable proyecto1ldp
  import:           warnings
  main-is:          MiniLisp.hs
  other-modules:    Lex, Grammars, Desugar, Interp
  build-depends:
    base ^>=4.18.3.0,
    array,
    containers,
    mtl,
    proyecto1ldp
  hs-source-dirs:   src
  default-language: GHC2021

test-suite proyecto1ldp-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  other-modules:    Lex, Grammars, Desugar, Interp
  build-depends:
    base ^>=4.18.3.0,
    array,
    containers,
    mtl,
    HUnit,
    proyecto1ldp
  hs-source-dirs:   src
  default-language: GHC2021
